# TP2_RL

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  colab_commands.py  colab_setup.py  install_colab.py  main.py  pyproject.toml  requirements.txt
.cursor/rules/: uv.mdc
dqn/: README.md  __init__.py  dqn_agent.py  minatar_wrapper.py  train_breakout.py  train_cartpole.py  train_cartpole_with_plots.py  train_custom_envs.py
envs/: __init__.py  constant_env.py  random_obs_env.py  two_step_env.py
experiments/: compare_dqn_vs_reinforce.py
plots/: comparison_summary.txt
qlearning/: README.md  __init__.py  demo_qlearning.py  plot_loss_vs_episodes.py  plot_simple_curves.py  qlearning_agent.py  simple_evaluation.py  train_custom_envs.py
reinforce/: reinforce.py
runs/: .gitkeep
runs/cartpole/20251013_094426/: events.out.tfevents.1760359466.Mac-36e8aaf4d2f2.fibertel.com.ar.7986.0
utils/: __init__.py  plotting.py  replay_buffer.py
