[project]
name = "tp2-dqn"
version = "0.1.0"
description = "TP Deep Q-Network (DQN) - Aprendizaje por Refuerzo"
authors = [
    {name = "Student", email = "student@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium>=1.0.0",
    "gymnasium[atari]>=1.0.0",
    "gymnasium[classic_control]>=1.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pandas>=1.3.0",
    "tensorboard>=2.8.0",
    "tensorboardX>=2.4",
    "Pillow>=8.3.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envs", "qlearning", "dqn", "utils"]

[dependency-groups]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
]
